2007-01-05	tsch

	* t/CairoSurface.t: Fix an endianness problem.

2006-12-30	tsch

	* MakeHelper.pm: Fix the valid-value lists in enum error messages.

2006-12-28	tsch

	* Cairo.pm, NEWS, README: Unstable release 1.030.

2006-12-28	tsch

	* Cairo.xs, cairo-perl.h, t/Cairo.t: Wrap and test
	cairo_copy_clip_rectangles and cairo_clip_extents.

2006-11-23	tsch

	* CairoSurface.xs, t/CairoSurface.t: Make
	Cairo::ImageSurface::get_data usable by specifying the buffer
	length.

	* MANIFEST, Makefile.PL, doctypes: Describe our types.

	* NEWS: Merge from stable-1-0.

2006-11-09	tsch

	* Cairo.xs, cairo-perl-private.h: Export cairo_perl_alloc_temp
	privately.

	* Cairo.xs: Remove the DOUBLES_ macros and inline them.  They were
	used only in one place.

	* Cairo.xs, t/Cairo.t: Wrap cairo_get_dash.

	* CairoPattern.xs, cairo-perl-private.h, t/CairoPattern.t: Wrap
	cairo_pattern_get_rgba, cairo_pattern_get_surface,
	cairo_pattern_get_color_stop_rgba, cairo_pattern_get_points, and
	cairo_pattern_get_circles.

	* Makefile.PL: Support new cairo_status_t values.

2006-11-09	tsch

	* Cairo.pm, NEWS, README: Stable release 1.02.

2006-11-09	tsch

	* MakeHelper.pm, CairoSurface.t: When comparing enum values, look
	at length+1, not just length, bytes to discern string pairs like
	'color' and 'color-alpha'.  Duh!  Many thanks to Martijn van Beers
	for finding this bug.

2006-09-24	tsch

	* Cairo.pm, NEWS: Stable release 1.01.

2006-09-24	tsch

	* t/CairoSurface.t: Skip the create_for_stream test for ps and pdf
	surfaces if cairo < 1.2.0.  Earlier versions didn't handle errors
	correctly and thus caused too many tests.  Also partly revert the
	previous change and instead do a conditional type check on
	surfaces create with create_similar.

2006-09-24	tsch

	* t/CairoSurface.t: Don't check the specific type of similar
	surfaces created from PS and PDF surfaces; it's not reliable.

	* xs/CairoSurface.xs: Cosmetical changes.

2006-09-04	tsch

	* Cairo.pm, NEWS, README: Stable release 1.00.